Fix margin spacing

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -84,7 +84,7 @@ blockquote {
 }
 
 hr {
-	margin: 30px 0; 
+	margin: $main-margin 0; 
 	@include sizing(100%, 0);
 	border: 0;
 	border-bottom: 1px solid $color-04;
