--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -174,12 +174,8 @@
 	box-shadow: 3px 3px 6px rgba($color-02, 0.30);
 } 
 
-.forabg, .panel, .section-posting #preview, .section-posting #topicreview {
-	margin: 0 0 40px 0;
-}
-
-.section-posting #preview + .post {
-	margin: -30px 0 40px 0;
+.forabg, .panel, .section-posting #preview, .section-posting #topicreview, .section-posting #preview + .post {
+	margin: 0 0 $main-margin 0;
 }
 
 .forumbg, .topic-wrapper {
@@ -232,20 +228,21 @@
 		margin: 0 10px 0 0;
 		@include flex;
 	}	
-	&.bar-top .search-box {
-		flex: 0 0 300px;
-	}
 	&.bar-top, &.bar-bottom {
 		.pagination {
 			margin: 0 0 0 auto;
 		}
 	}
-	&.actions-jump {		
+	&.bar-top .search-box {
+		flex: 0 0 300px;
+	}
+	&.actions-jump {
+		margin: $main-margin 0;		
 		.jumpbox-return .icon {
 			width: auto;
 			margin: 0 5px 0 0;
 		}
-		.jumpbox {
+		.jumpbox-return + .jumpbox {
 			margin: 0 0 0 auto;
 		}
 	}
@@ -375,12 +372,9 @@
 ========================================================================== */
 
 .stat-block {
-	margin: 0 0 40px 0;
+	margin: 0 0 $main-margin 0;
 	h3 {
 		margin: 0 0 10px 0;
-	}
-	&.online-list {
-		margin-top: 40px;
 	}
 }
 
