--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -35,4 +35,5 @@ $font-03: 'Selima', $sans-serif-fb;
 /* Other
 ========================================================================== */
 
+$main-margin: 30px;
 $mobile-menu-width: 300px;
